Split out discord bot from web app with oauth to discord

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Fate-Bot</title>
+
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/android-mask-touch-114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/android-mask-touch-114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/android-mask-touch-144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/android-mask-touch-144.png">
+  <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="/images/android-mask-favicon.ico">
+  <link rel="icon" sizes="128x128" href="/images/android-mask-favicon.icns">
+  <link rel="icon" href="/images/android-mask-favicon.png" type="image/x-icon">
+
   <link rel="stylesheet" type="text/css" href="/styles/fonts.css"/>
 </head>
 <body>
